<resources>
    <string name="app_name">Community Outreach</string>
    <string name="select_new_admin"> Select </string>
    <string name="add_event">Add Event</string>
    <string name="create_event">Create Event</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_or_email"> Username or Email </string>
    <string name="password"> Password </string>
    <string name="login">Login</string>
    <string name="or_login_with">- Or Login with - </string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="forget_password">Forget Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_main_page">Main Page</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="title_view_events">View Events</string>
    <string name="title_activity_create_event">Create Event</string>
    <string name="title_activity_update_event">Update Event</string>
    <string name="create_event_instructions">Please fill in the event details</string>
    <string name="create_event_instructions_1">Please fill in the schedule</string>
    <string name="event_poster">Poster: </string>
    <string name="event_poster_desc">This is a event poster </string>
    <string name="upload_event_poster">Upload poster </string>
    <string name="event_name">Name: </string>
    <string name="hint_event_name"> Enter event name </string>
    <string name="hint_event_description">Enter event description </string>
    <string name="hint_event_location">Enter event location </string>
    <string name="hint_no_of_participants"> Enter no. of participants </string>
    <string name="category">Category: </string>
    <string name="description">Description: </string>
    <string name="number_of_participants">No. of participants allowed: </string>
    <string name="date">Date: </string>
    <string-array name="repeats">
        <item>Once</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Annually</item>
    </string-array>
    <string name="time">Time: </string>
    <string name="from">From: </string>
    <string name="to">To: </string>
    <string name="check_in">Check In </string>
    <string name="location">Location: </string>
    <string name="location_alt">You have requested for an event location.</string>
    <string name="suggest_location">Suggest Location</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="imgdesc">navigation</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="gName">Group Name</string>
    <string name="gType">Group Type</string>
    <string name="gDesc">Group Description</string>
    <string name="articleLocSelection"><u>Not the location you want?</u></string>
    <string name="gTitleHint">Enter Group Name</string>
    <string name="SelectImg">Please Select An ImageFor Your Group </string>
    <string name="uploadImg">Select An Image From gallery</string>
    <string name="createGrp">Create Group</string>
    <string name="action_new">new post</string>
    <string name="action_new_post">create post</string>
    <string name="action_update_group">Edit Group</string>
    <string name="action_update_post">update</string>
    <string name="update_event">Update event</string>
    <string name="join_event">Join event</string>
    <string name="unjoin_event">Unjoin event</string>
    <string name="share_event">Share event</string>
    <string name="view_saved_event">View saved event</string>
    <string name="action_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_edit">Edit</string>
    <string name="request_help"> Request help from hobby group? </string>
    <string-array name="imgBy">
        <item>Gallery</item>
        <item>Camera</item>
    </string-array>
    <string-array name="type_of_events">
        <item>Big Event</item>
        <item>Small Event</item>
    </string-array>
    <string-array name="categorys">
        <item>Arts</item>
        <item>Education</item>
        <item>Family</item>
        <item>Health</item>
    </string-array>
    <string-array name="noOfParticipants">
        <item> 0 - 99 </item>
        <item> 100 - 499 </item>
        <item> 500 - 999 </item>
        <item> 1000 - 9999 </item>
        <item> 10000 - 99999 </item>
    </string-array>
    <string-array name="titles">
        <item>setting1</item>
        <item>setting2</item>
        <item>setting3</item>
        <item>setting4</item>
    </string-array>
    <string name="country_prompt">Choose a country</string>
    <string-array name="country_arrays">
        <item>Dance</item>
        <item>Cooking</item>
        <item>Gardening</item>
    </string-array>
    <string-array name="navgigation_drawer_items_array">
        <item>Create</item>
        <item>Read</item>
        <item>Help</item>
    </string-array>
    <string-array name="article_category_choice">
        <item>Feedback</item>
        <item>News Around The Neighbourhood</item>
        <item>Location Usage</item>
    </string-array>
    <string name="title_activity_main_link_page">MainLinkPage</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_view_hobbies_main">ViewHobbiesMain</string>
    <string name="title_activity_hobbies__joined">Hobbies_Joined</string>
    <string name="title_activity_hobbies__all">Hobbies_All</string>
    <string name="title_activity_submit_article">SubmitArticle</string>
    <string name="title_activity_article_loc_selection">ArticleLocSelection</string>
    <string name="title_activity_create_group_activity_step4">CreateGroup</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_heatmap">Heatmap</string>
    <string name="title_activity_riddle">Riddle</string>
    <string name="title_activity_create_riddle">Create Riddle</string>
    <string name="title_activity_update_riddle">Update Riddle</string>
    <string name="action_create_riddle">Create Riddle</string>
    <string name="action_update_riddle">Update Riddle</string>
    <string name="action_delete_riddle">Delete Riddle</string>
    <string name="tv_riddle_title">Title:</string>
    <string name="et_hint_riddle_title">Enter title</string>
    <string name="tv_riddle_content">Content:</string>
    <string name="et_hint_riddle_content">Enter riddle</string>
    <string name="tv_riddle_choice">Choices:</string>
    <string name="rbtn_riddle_answer_1">Choice 1: </string>
    <string name="rbtn_riddle_answer_2">Choice 2: </string>
    <string name="rbtn_riddle_answer_3">Choice 3: </string>
    <string name="rbtn_riddle_answer_4">Choice 4: </string>
    <string name="et_hint_riddle_answer">Enter answer</string>
    <string name="btn_create_riddle">CREATE</string>
    <string name="btn_update_riddle">UPDATE</string>
    <string name="btn_rate">RATE</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="tv_points">Points: </string>
    <string name="tv_address">Current Location: </string>
    <string name="address_output_string">%1$s %2$s</string>
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="action_settings">Settings</string>
    <string name="action_heatmap">Heatmap</string>
    <string name="latlng">Latitude/Longitude:</string>
    <string name="address">Address:</string>
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">        Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">        Location update error. code %1$d message %2$s</string>
    <string name="location_update_missing_update">        Location update error. No incoming location.</string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">        Can\'t request location updates, previous request hasn\'t finished</string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">        Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="title_activity_geofence">Geofence Entry</string>
    <string name="geofence1">Geofence 1</string>
    <string name="geofence2">Geofence 2</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="menu_item_clear_geofence1">Clear geofence 1</string>
    <string name="menu_item_clear_geofence2">Clear geofence 2</string>
    <string name="menu_item_clear_all_geofences">Clear all geofences</string>
    <string name="menu_item_clear_geofence_history">Clear stored geofences</string>
    <string name="radius">Radius</string>
    <string name="add_geofences_result_success">        Add Geofences: Success GeofenceRequestIds=%1$s</string>
    <string name="add_geofences_result_failure">        Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s</string>
    <string name="add_geofences_already_requested_error">        Can\'t add geofences, previous request hasn\'t finished.</string>
    <string name="geofence_input_error_missing">Missing value</string>
    <string name="fb_create_user_instructions"> Please fill in the user details. </string>
    <string name="fb_user_nric">NRIC: </string>
    <string name="fb_hint_user_nric"> Enter your nric </string>
    <string name="fb_user_contact_no">Contact No: </string>
    <string name="fb_hint_user_contact_no"> Enter your contact no </string>
    <string name="fb_user_address"> Address: </string>
    <string name="fb_hint_user_address"> Enter your address </string>
    <string name="select_theme"> Select theme </string>
    <string name="options"> Options </string>
    <string name="deselect_all_themes"> Deselect all theme(s) </string>
    <string name="refresh_map"> Refresh Map </string>
    <string name="view_request"> View Request </string>
</resources>