<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
       android:paddingTop="10dp"
       android:paddingLeft="10dp"
       android:paddingRight="10dp" >
       
    <TextView
        android:id="@+id/tv_update_riddle_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/tv_riddle_title" />
    
    <EditText
        android:id="@+id/et_riddle_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_update_riddle_title"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:scrollHorizontally="false"
        android:hint="@string/et_hint_riddle_title" />
    
    <TextView
        android:id="@+id/tv_update_riddle_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_riddle_title"
        android:paddingTop="10dp"
        android:textSize="18sp"
        android:text="@string/tv_riddle_content" />
    
    <EditText
        android:id="@+id/et_riddle_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="2"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"
        android:layout_below="@+id/tv_update_riddle_content"
        android:hint="@string/et_hint_riddle_content" />
    
    <TextView
        android:id="@+id/tv_update_riddle_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_riddle_content"
        android:paddingTop="10dp"
        android:textSize="18sp"
        android:text="@string/tv_riddle_choice" />
        
    <LinearLayout
        android:id="@+id/ll_riddle_answer_1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/tv_update_riddle_choice"
		android:orientation="horizontal" >
  
	     <RadioButton
			android:id="@+id/rbtn_riddle_answer_1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="true"
			android:text="@string/rbtn_riddle_answer_1" />
     
    	<EditText
			android:id="@+id/et_riddle_answer_1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:imeOptions="actionNext"
			android:scrollHorizontally="false"
			android:hint="@string/et_hint_riddle_answer" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ll_riddle_answer_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_riddle_answer_1"
        android:orientation="horizontal" >
    	
		<RadioButton
		    android:id="@+id/rbtn_riddle_answer_2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/rbtn_riddle_answer_2" />
     
    	<EditText
			android:id="@+id/et_riddle_answer_2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:imeOptions="actionNext"
			android:scrollHorizontally="false"
			android:hint="@string/et_hint_riddle_answer" />
    </LinearLayout>
    
	<LinearLayout
        android:id="@+id/ll_riddle_answer_3"
		android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:layout_below="@+id/ll_riddle_answer_2"
	    android:orientation="horizontal" >

		<RadioButton
			android:id="@+id/rbtn_riddle_answer_3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/rbtn_riddle_answer_3" />
		
    	<EditText
			android:id="@+id/et_riddle_answer_3"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:imeOptions="actionNext"
			android:scrollHorizontally="false"
			android:hint="@string/et_hint_riddle_answer" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ll_riddle_answer_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_riddle_answer_3"
        android:orientation="horizontal" >
    
		<RadioButton
		    android:id="@+id/rbtn_riddle_answer_4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/rbtn_riddle_answer_4" />
      
    	<EditText
			android:id="@+id/et_riddle_answer_4"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:imeOptions="actionDone"
			android:scrollHorizontally="false"
			android:hint="@string/et_hint_riddle_answer" />
    </LinearLayout>
    
    <Button
        android:id="@+id/btn_update_riddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/ll_riddle_answer_4"
        android:layout_alignParentRight="true"
        android:text="@string/btn_update_riddle" />
</RelativeLayout>
